mobilerobotics_ws/log/build_2023-11-30_22-39-04/pathing/stderr.log
  File "/home/april/mobilerobotics_ws/install/pathing/lib/python3.8/site-packages/pathing/better_soccer.py", line 255
    if self.rrt = None:
                ^
SyntaxError: invalid syntax

